# Prog2Projet

./: README.md
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/config/: ocaml.config
_opam/.opam-switch/install/: ocaml-base-compiler.changes  ocaml-config.changes  ocaml.changes
_opam/lib/ocaml/: Makefile.config  camlinternalFormat.cmi  camlinternalFormat.cmt  camlinternalFormat.cmti  camlinternalFormat.cmx  camlinternalFormatBasics.cmi  camlinternalFormatBasics.cmt  camlinternalFormatBasics.cmti  camlinternalFormatBasics.cmx  camlinternalLazy.cmi  camlinternalLazy.cmt  camlinternalLazy.cmti  camlinternalLazy.cmx  camlinternalMod.cmi  camlinternalMod.cmt  camlinternalMod.cmti  camlinternalMod.cmx  (+263 more)
prog2-projet-2025/: .ocamlformat  LICENSE  dune-project  minirust.opam
prog2-projet-2025/lib/: active_borrows.ml  active_borrows.mli  ast.ml  ast.mli  borrowck.ml  borrowck.mli  dune  emit_minimir.ml  emit_minimir.mli  error.ml  error.mli  lexer.mll  live_locals.ml  live_locals.mli  minimir.ml  minimir.mli  parser.mly  parser_entry.ml  parser_entry.mli  print_minimir.ml  print_minimir.mli  type.ml  type.mli  typecheck.ml  typecheck.mli  uninitialized_places.ml  uninitialized_places.mli
prog2-projet-2025/minirust/: dune  minirust.ml
prog2-projet-2025/tests/: 02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  26.rs  27.rs  28.rs  29.rs  30.rs  31.rs  32.rs  33.rs  34.rs  35.rs  36.rs  37.rs  38.rs  39.rs  40.rs  41.rs  (+54 more)
(+1686 files in other folders)
